# RF_PageObjects

./: README.md  base.resource  pyproject.toml
resource/locators/: authenticationLocators.yml  cartLayerLocators.yml  homeLocators.yml  myAccountLocators.yml  productDetailsLocators.yml
resource/pages/: authenticationPage.resource  cartLayerPage.resource  homePage.resource  myAccountPage.resource  productDetailPage.resource
resource/utils/: customKeywords.resource  openBrowser.resource  open_browser.resource
test/: With_PageObjects_Test.robot  Without_PageObjects_Test.robot
