[tool.poetry]
name = "rf-pageobjects"
version = "0.1.0"
description = ""
authors = ["Vinicius Trindade <vinicius.trindade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
robotframework-seleniumlibrary = "^6.3.0"
PyYAML = "^6.0.1"
robotframework = "^7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
